#37 #42 text misalignment and sport keyword fix

--- a/frontend/src/component/DiaryWrite/honeycombb.css
+++ b/frontend/src/component/DiaryWrite/honeycombb.css
@@ -85,7 +85,7 @@
   bottom: 50%;
   padding-top:50%;
   font-weight: bold;
-  font-size: 1.5em;
+  font-size: 1.4em;
   z-index: 1000;
 }
 .hex h1:before, .hex h1:after {
